...
    >
      <Stack.Screen
        name="listing/[id]"
        options={{
          headerShown: true,
          headerTitle: "Listing",
          headerBackTitle: "Back",
        }}
      />
    </Stack>
  );
}

